<resources>
    <string name="app_name">Makač</string>
    <string name="action_settings">Settings</string>
    <string name="duration">Duration</string>
    <string name="time">00:00:00</string>
    <string name="distance_text">Distance</string>
    <string name="distance">0.00</string>
    <string name="distance_unit">km</string>
    <string name="paceText">Pace</string>
    <string name="pace">0.00</string>
    <string name="pace_unit">m/s</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_button">Maps</string>
    <string name="synchronize">Synchronize</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tracker_title">Tracker</string>
    <string name="summary_title">Summary</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>
    <string name="makac">Makač</string>
    <string name="achivements">Achievements</string>
    <string name="womb">World of Makač</string>
    <string name="entry">Past Run</string>
    <string name="send">Send</string>
    <string name="credist">By Erik Timko</string>
</resources>
